Fixed bug where images could not be opened on mobile

--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -2,7 +2,7 @@
     background-color: #3C444B;
 }
 
-html:not(.touch) .gallery-image figcaption, .touch .gallery-image figcaption, .mfp-with-zoom .mfp-title {
+.gallery-image figcaption, .touch .gallery-image figcaption, .mfp-with-zoom .mfp-title {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -16,7 +16,7 @@ html:not(.touch) .gallery-image figcaption, .touch .gallery-image figcaption, .m
     text-align: center;
     box-sizing: border-box;
   }
-  html:not(.touch) .gallery-image figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .mfp-title:before, html:not(.touch) .gallery-image figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .mfp-title:after {
+ .gallery-image figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .mfp-title:before,.gallery-image figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .mfp-title:after {
     content: "";
     position: absolute;
     background: rgba(0, 0, 0, 0.2);
@@ -27,32 +27,33 @@ html:not(.touch) .gallery-image figcaption, .touch .gallery-image figcaption, .m
     opacity: 0;
     z-index: -1;
   }
-  html:not(.touch) .gallery-image figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .mfp-title:before, html:not(.touch) .gallery-image figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .mfp-title:after {
+ .gallery-image figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .mfp-title:before,.gallery-image figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .mfp-title:after {
     right: 100%;
     bottom: 100%;
   }
-  html:not(.touch) .gallery-image figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .mfp-title:after {
+ .gallery-image figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .mfp-title:after {
     left: 100%;
     top: 100%;
   }
-  html:not(.touch) .gallery-image figcaption.visible, html:not(.touch) .gallery-image:hover figcaption, .touch .gallery-image figcaption, .mfp-with-zoom .visible.mfp-title, .mfp-with-zoom.mfp-ready .mfp-title {
+  .gallery-image figcaption.visible,.gallery-image:hover figcaption, .touch .gallery-image figcaption, .mfp-with-zoom .visible.mfp-title, .mfp-with-zoom.mfp-ready .mfp-title {
     color: white;
     transition: all 0.2s ease 0.3s;
   }
-  html:not(.touch) .gallery-image figcaption.visible:before, html:not(.touch) .gallery-image:hover figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .visible.mfp-title:before, .mfp-with-zoom.mfp-ready .mfp-title:before, html:not(.touch) .gallery-image figcaption.visible:after, html:not(.touch) .gallery-image:hover figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .visible.mfp-title:after, .mfp-with-zoom.mfp-ready .mfp-title:after {
+ .gallery-image figcaption.visible:before,.gallery-image:hover figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .visible.mfp-title:before, .mfp-with-zoom.mfp-ready .mfp-title:before,.gallery-image figcaption.visible:after,.gallery-image:hover figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .visible.mfp-title:after, .mfp-with-zoom.mfp-ready .mfp-title:after {
     opacity: 1;
   }
-  html:not(.touch) .gallery-image figcaption.visible:before, html:not(.touch) .gallery-image:hover figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .visible.mfp-title:before, .mfp-with-zoom.mfp-ready .mfp-title:before {
+ .gallery-image figcaption.visible:before,.gallery-image:hover figcaption:before, .touch .gallery-image figcaption:before, .mfp-with-zoom .visible.mfp-title:before, .mfp-with-zoom.mfp-ready .mfp-title:before {
     right: -1.5em;
     bottom: -1.5em;
   }
-  html:not(.touch) .gallery-image figcaption.visible:after, html:not(.touch) .gallery-image:hover figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .visible.mfp-title:after, .mfp-with-zoom.mfp-ready .mfp-title:after {
+ .gallery-image figcaption.visible:after,.gallery-image:hover figcaption:after, .touch .gallery-image figcaption:after, .mfp-with-zoom .visible.mfp-title:after, .mfp-with-zoom.mfp-ready .mfp-title:after {
     left: -1.5em;
     top: -1.5em;
   }
 
   
   .gallery {
+    cursor: pointer;
     -webkit-column-gap: 0;
             column-gap: 0;
   }
@@ -93,7 +94,7 @@ html:not(.touch) .gallery-image figcaption, .touch .gallery-image figcaption, .m
     max-width: 100%;
     height: auto;
   }
-  html:not(.touch) .gallery-image {
+ .gallery-image {
     overflow: hidden;
   }
 
@@ -101,10 +102,10 @@ html:not(.touch) .gallery-image figcaption, .touch .gallery-image figcaption, .m
     zoom: 1.4;
   }
 
-  html:not(.touch) .gallery-image:hover:before {
+ .gallery-image:hover:before {
     border-width: 16px;
   }
-  html:not(.touch) .gallery-image:hover:after {
+ .gallery-image:hover:after {
     border-width: 32px;
   }
   .touch .gallery-image figcaption {
